Expand observability notes: recording rules, JVM heap, GC deep-dive, K8s Q&A
Add detailed explanations for Grafana panels (latency percentiles, thread states, GC pause), JVM heap generations, PromQL recording rules, plus Q&A on pods/replicas, readiness vs liveness, DB resilience, PgBouncer, and reading panel gaps.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>